# ledmatrix

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  boxfile  buildcon  imagetorgb888.py
src/: CMakeLists.txt  ControlServer.cpp  ControlServer.hpp  FreeRTOSConfig.h  Hub75.cpp  Hub75.hpp  hub75.c  hub75.cpp  hub75.hpp  lwipopts.h  main.cpp  oshawatt.h  util.hpp
src/apps/animation/: Animation.hpp  animation.cpp
src/apps/clock/: Clock.cpp  Clock.hpp  clock.cpp  font.hpp
src/images/: colordots.h  eevee.h  img_vaporwave.h
tools/: colortools.py  imagetorgb888.py  writecommand.py
